<resources>
    <string name="app_name">Donggukthon-2023-5-F</string>

    <!-- home -->
    <string name="home_room">%s님의 방</string>
    <string name="home_click">트리와 난로를 클릭해보세요.</string>
    <string name="home_tree">트리</string>
    <string name="home_stove">난로</string>

    <!-- tree -->
    <string name="tree_decorate">장식하기</string>
    <string name="tree_previous_record"><u>이전 기록 보기</u></string>

    <!-- tree detail -->
    <string name="tree_detail_tree">%s님의 트리</string>

    <!-- fire place -->
    <string name="fire_place_not_burning_yet">아직 태우지 않은 기억이 있어요!</string>
    <string name="fire_place_firewood">장작넣기</string>
    <string name="fire_place_continue">계속해서 나쁜 기억을 기록하려면\n 장작넣기를 클릭하세요.</string>

    <string name="tree_see_record"><u>이전 기록 보기</u></string>
    <string name="dialog_tree_hint_content">즐거웠던 기억,\n간직하고 싶은 기억을\n적어보세요</string>
    <string name="dialog_tree_hint_content_small">ex)\n자고 일어났더니\n부모님이 머리맡에 선물을 두고\n출근하셨던 기억.</string>
    <string name="tree_record_hint">입력하세요(100자 내외)</string>
    <string name="fireplace_record_content">잊고싶은 기억,\n후회되는 기억을\n적어보세요</string>
    <string name="fireplace_record_content_hint">ex)\n자격증 시험 전 날\n유투브를 보느라 늦게 자서\n시험 시간에 늦은 것.</string>
    <string name="fireplace_after_burn_content">나쁜 기억을 태워버렸어요!\n안좋은 기억은 잊고\n좋은 기억만 남기를 바래요:)</string>
    <string name="fireplace_get_present_fireplace">선물이 도착했어요!</string>
</resources>