<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.donggukthon.team5.presentation.fireplace.FirePlaceViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/shape_gradient_background"
        tools:context=".presentation.fireplace.FirePlaceActivity">

        <ImageView
            android:id="@+id/iv_fire_place_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/ic_home"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_fire_place_fire_place"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="59dp"
            android:src="@drawable/ic_fire_place"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_fire_place_home" />

        <ImageView
            android:id="@+id/ic_fire_place_fire"
            invisibility="@{viewModel.mockOrnamentOverviewList[3]}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="-33dp"
            android:src="@drawable/ic_fire_button"
            app:layout_constraintBottom_toBottomOf="@+id/iv_fire_place_fire_place"
            app:layout_constraintEnd_toEndOf="@+id/iv_fire_place_fire_place" />

        <TextView
            android:id="@+id/tv_fire_place_not_burning_yet"
            invisibility="@{viewModel.mockOrnamentOverviewList[3]}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/fire_place_not_burning_yet"
            android:textAppearance="@style/TextAppearance.Detail"
            android:textColor="@color/red_600"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_fire_place_fire_place" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_fire_place_firewood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/shape_yellow_200_line_10_rect"
            android:paddingHorizontal="35dp"
            android:paddingVertical="15dp"
            android:text="@string/fire_place_firewood"
            android:textAppearance="@style/TextAppearance.Button1"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_fire_place_not_burning_yet" />

        <TextView
            android:id="@+id/tv_fire_place_continue"
            invisibility="@{viewModel.mockOrnamentOverviewList[3]}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/fire_place_continue"
            android:textAppearance="@style/TextAppearance.Body"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_fire_place_firewood" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>